# qtbridges_demo

./: .gitignore  cleanup_files.sh  gulpfile.js  index.html  package.json  slides_prep.txt
css/: extras.css  qt-theme.css  qt.css
plugin/highlight/: highlight.esm.js  highlight.js
plugin/markdown/: markdown.esm.js  markdown.js  plugin.js
plugin/notes/: notes.esm.js  notes.js  plugin.js
plugin/zoom/: zoom.esm.js
sbk_wizard_test/: CMakeLists.txt  sample.cpp  sample.h  test_typesystem.xml
